--- a/Asaas-Portfolio/style.css
+++ b/Asaas-Portfolio/style.css
@@ -43,6 +43,53 @@
 .nav-links li a:hover {
   color: #00c3ff;
 }
+
+
+
+/* Sous-menu déroulant */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top:100%; /* en dessous du lien parent */
+  left: 0;
+  background: #222;
+  list-style: none;
+  padding: 10px 0;
+  margin: 0;
+  min-width: 180px;
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+
+.dropdown-menu li {
+  text-align: left;
+}
+
+.dropdown-menu li a {
+  display: block;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 0.95rem;
+  transition: background 0.3s ease;
+}
+
+.dropdown-menu li a:hover {
+  background: #00c3ff;
+  color: #000;
+}
+
+/* Affichage au survol */
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+
+
 .home{
  margin-top: 60px;
      /* background: linear-gradient(to right, rgb(243, 201, 201),rgb(255, 255, 255)); */
