--- a/Asaas-Portfolio/style.css
+++ b/Asaas-Portfolio/style.css
@@ -264,7 +264,7 @@ h2 span{
 
 .skill-box {
   margin-top: 20px;
- background:  linear-gradient(to right,rgb(255, 255, 255),rgb(240, 204, 221));
+ background:  linear-gradient(to right,rgb(230, 200, 224),rgb(136, 48, 89));
   border: 2px solid #ffe5f2;
   border-radius: 12px;
   width: 130px;
@@ -307,7 +307,8 @@ h2 span{
 
 .education, .experience {
   flex: 1;
-  max-width: 400px;
+  max-width: 500px;
+  
 }
 
 .education h3, .experience h3 {
@@ -322,8 +323,8 @@ h2 span{
 
 .card {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background: #ffffff;
-  border: 2px solid  linear-gradient(to right,rgb(255, 255, 255),rgb(236, 182, 207));
+  background: linear-gradient(to right,rgb(230, 200, 224),rgb(136, 48, 89));
+  border: 1px solid  rgb(230, 200, 224);
   border-radius: 12px;
   padding: 20px;
   margin-bottom: 20px;
@@ -681,3 +682,6 @@ footer span{
   font-size: 0.9rem;
   color: #333;
 }
+
+
+
